@@ -2,7 +2,11 @@ package truonggg.service.IMPL;
 
 import java.util.Date;
 import java.util.List;
+import java.util.stream.Collectors;
 
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.security.access.AccessDeniedException;
 import org.springframework.stereotype.Service;
 
 import lombok.RequiredArgsConstructor;
@@ -10,12 +14,12 @@ import truonggg.Exception.NotFoundException;
 import truonggg.Model.Notifications;
 import truonggg.Model.User;
 import truonggg.dto.reponseDTO.NotificationsResponseDTO;
-import truonggg.dto.requestDTO.NotificationsDeleteRequestDTO;
 import truonggg.dto.requestDTO.NotificationsRequestDTO;
 import truonggg.dto.requestDTO.NotificationsUpdateRequestDTO;
 import truonggg.mapper.NotificationsMapper;
 import truonggg.repo.NotificationsRepository;
 import truonggg.repo.UserRepository;
+import truonggg.reponse.PagedResult;
 import truonggg.service.NotificationsService;
 
 @Service
@@ -35,42 +39,57 @@ public class NotificationsServiceIMPL implements NotificationsService {
 		notification.setMessage(dto.getMessage());
 		notification.setUser(user);
 		notification.setCreatedAt(new Date());
-		notification.setIsRead(dto.getIsRead() != null ? dto.getIsRead() : false);
+		// notification.setIsRead(dto.getIsRead() != null ? dto.getIsRead() : false);
 
 		notification = this.notificationsRepository.save(notification);
 		NotificationsResponseDTO response = this.notificationsMapper.toDTO(notification);
 		response.setIsRead(notification.getIsRead());
+		// Đảm bảo userName được set đúng từ user đã load (luôn set để đảm bảo có giá trị)
+		response.setUserName(user.getFullName());
 		return response;
 	}
 
 	@Override
-	public List<NotificationsResponseDTO> getAll() {
-		List<Notifications> notifications = this.notificationsRepository.findAll();
-		return notifications.stream().map(notification -> {
+	public PagedResult<NotificationsResponseDTO> getAll(Pageable pageable) {
+		Page<Notifications> notificationsPage = this.notificationsRepository.findAll(pageable);
+		List<NotificationsResponseDTO> dtoList = notificationsPage.stream().map(notification -> {
 			NotificationsResponseDTO dto = this.notificationsMapper.toDTO(notification);
 			dto.setIsRead(notification.getIsRead());
 			return dto;
-		}).toList();
+		}).collect(Collectors.toList());
+
+		return PagedResult.<NotificationsResponseDTO>builder().content(dtoList)
+				.totalElements((int) notificationsPage.getTotalElements()).totalPages(notificationsPage.getTotalPages())
+				.currentPage(notificationsPage.getNumber()).pageSize(notificationsPage.getSize()).build();
 	}
 
 	@Override
-	public List<NotificationsResponseDTO> getByUserId(Integer userId) {
-		List<Notifications> notifications = this.notificationsRepository.findByUserUserId(userId);
-		return notifications.stream().map(notification -> {
+	public PagedResult<NotificationsResponseDTO> getByUserId(Integer userId, Pageable pageable) {
+		Page<Notifications> notificationsPage = this.notificationsRepository.findByUserUserId(userId, pageable);
+		List<NotificationsResponseDTO> dtoList = notificationsPage.stream().map(notification -> {
 			NotificationsResponseDTO dto = this.notificationsMapper.toDTO(notification);
 			dto.setIsRead(notification.getIsRead());
 			return dto;
-		}).toList();
+		}).collect(Collectors.toList());
+
+		return PagedResult.<NotificationsResponseDTO>builder().content(dtoList)
+				.totalElements((int) notificationsPage.getTotalElements()).totalPages(notificationsPage.getTotalPages())
+				.currentPage(notificationsPage.getNumber()).pageSize(notificationsPage.getSize()).build();
 	}
 
 	@Override
-	public List<NotificationsResponseDTO> getUnreadByUserId(Integer userId) {
-		List<Notifications> notifications = this.notificationsRepository.findByUserUserIdAndIsRead(userId, false);
-		return notifications.stream().map(notification -> {
+	public PagedResult<NotificationsResponseDTO> getUnreadByUserId(Integer userId, Pageable pageable) {
+		Page<Notifications> notificationsPage = this.notificationsRepository.findByUserUserIdAndIsRead(userId, false,
+				pageable);
+		List<NotificationsResponseDTO> dtoList = notificationsPage.stream().map(notification -> {
 			NotificationsResponseDTO dto = this.notificationsMapper.toDTO(notification);
 			dto.setIsRead(notification.getIsRead());
 			return dto;
-		}).toList();
+		}).collect(Collectors.toList());
+
+		return PagedResult.<NotificationsResponseDTO>builder().content(dtoList)
+				.totalElements((int) notificationsPage.getTotalElements()).totalPages(notificationsPage.getTotalPages())
+				.currentPage(notificationsPage.getNumber()).pageSize(notificationsPage.getSize()).build();
 	}
 
 	@Override
@@ -83,8 +102,8 @@ public class NotificationsServiceIMPL implements NotificationsService {
 	}
 
 	@Override
-	public NotificationsResponseDTO update(NotificationsUpdateRequestDTO dto) {
-		Notifications foundNotification = this.notificationsRepository.findById(dto.getId())
+	public NotificationsResponseDTO update(Integer id, NotificationsUpdateRequestDTO dto) {
+		Notifications foundNotification = this.notificationsRepository.findById(id)
 				.orElseThrow(() -> new NotFoundException("notification", "Notification Not Found"));
 
 		// Cập nhật message nếu có
@@ -111,19 +130,22 @@ public class NotificationsServiceIMPL implements NotificationsService {
 	}
 
 	@Override
-	public boolean delete(NotificationsDeleteRequestDTO dto) {
-		Notifications foundNotification = this.notificationsRepository.findById(dto.getId())
+	public NotificationsResponseDTO delete(Integer id) {
+		Notifications foundNotification = this.notificationsRepository.findById(id)
 				.orElseThrow(() -> new NotFoundException("notification", "Notification Not Found"));
 
-		if (dto.getIsRead() != null) {
-			foundNotification.setIsRead(dto.getIsRead());
-			this.notificationsRepository.save(foundNotification);
-		}
-		return true;
+		// Soft delete: xóa thực sự khỏi database (vì model không có field
+		// deleted/isActive)
+		this.notificationsRepository.delete(foundNotification);
+
+		// Trả về DTO trước khi xóa
+		NotificationsResponseDTO response = this.notificationsMapper.toDTO(foundNotification);
+		response.setIsRead(foundNotification.getIsRead());
+		return response;
 	}
 
 	@Override
-	public boolean delete(Integer id) {
+	public boolean hardDelete(Integer id) {
 		Notifications foundNotification = this.notificationsRepository.findById(id)
 				.orElseThrow(() -> new NotFoundException("notification", "Notification Not Found"));
 
@@ -132,12 +154,69 @@ public class NotificationsServiceIMPL implements NotificationsService {
 	}
 
 	@Override
-	public boolean markAsRead(Integer id) {
+	public NotificationsResponseDTO markAsRead(Integer id) {
 		Notifications foundNotification = this.notificationsRepository.findById(id)
 				.orElseThrow(() -> new NotFoundException("notification", "Notification Not Found"));
 
 		foundNotification.setIsRead(true);
+		Notifications savedNotification = this.notificationsRepository.save(foundNotification);
+
+		NotificationsResponseDTO response = this.notificationsMapper.toDTO(savedNotification);
+		response.setIsRead(savedNotification.getIsRead());
+		return response;
+	}
+
+	@Override
+	public PagedResult<NotificationsResponseDTO> getByCurrentUser(String username, Pageable pageable) {
+		User user = this.userRepository.findByUserName(username)
+				.orElseThrow(() -> new NotFoundException("user", "User Not Found"));
+
+		return this.getByUserId(user.getUserId(), pageable);
+	}
+
+	@Override
+	public PagedResult<NotificationsResponseDTO> getUnreadByCurrentUser(String username, Pageable pageable) {
+		User user = this.userRepository.findByUserName(username)
+				.orElseThrow(() -> new NotFoundException("user", "User Not Found"));
+
+		return this.getUnreadByUserId(user.getUserId(), pageable);
+	}
+
+	@Override
+	public boolean markAsReadByCurrentUser(Integer id, String username) {
+		User user = this.userRepository.findByUserName(username)
+				.orElseThrow(() -> new NotFoundException("user", "User Not Found"));
+
+		Notifications foundNotification = this.notificationsRepository.findById(id)
+				.orElseThrow(() -> new NotFoundException("notification", "Notification Not Found"));
+
+		// Kiểm tra quyền: user chỉ có thể đánh dấu đọc notification của chính mình
+		if (!foundNotification.getUser().getUserId().equals(user.getUserId())) {
+			throw new AccessDeniedException("You cannot modify this notification");
+		}
+
+		foundNotification.setIsRead(true);
 		this.notificationsRepository.save(foundNotification);
+		return true;
+	}
+
+	@Override
+	public boolean softDeleteByCurrentUser(Integer id, String username) {
+		User user = this.userRepository.findByUserName(username)
+				.orElseThrow(() -> new NotFoundException("user", "User Not Found"));
+
+		Notifications foundNotification = this.notificationsRepository.findById(id)
+				.orElseThrow(() -> new NotFoundException("notification", "Notification Not Found"));
+
+		// Kiểm tra quyền: user chỉ có thể xóa notification của chính mình
+		if (!foundNotification.getUser().getUserId().equals(user.getUserId())) {
+			throw new AccessDeniedException("You cannot modify this notification");
+		}
+
+		// Soft delete: Vì model không có field deleted/isActive,
+		// ta sẽ xóa thực sự khỏi database (tương tự hard delete nhưng chỉ cho phép user
+		// xóa của chính mình)
+		this.notificationsRepository.delete(foundNotification);
 		return true;
 	}
 }
